--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ server.port=8080
 
 spring.application.name=music
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/music?useSSL=false&serverTimezone=Asia/Shanghai&characterEncoding=UTF8
+spring.datasource.url=jdbc:mysql://${MYSQL_USERNAME}:3306/music?useSSL=false&serverTimezone=Asia/Shanghai&characterEncoding=UTF8
 
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.username=${MYSQL_USERNAME}
+spring.datasource.password=${MYSQL_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
