--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8080
 
 spring.application.name=music
 
-spring.datasource.url=jdbc:mysql://${MYSQL_USERNAME}:3306/music?useSSL=false&serverTimezone=Asia/Shanghai&characterEncoding=UTF8
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:3306/music?useSSL=false&serverTimezone=Asia/Shanghai&characterEncoding=UTF8
 
 spring.datasource.username=${MYSQL_USERNAME}
 spring.datasource.password=${MYSQL_PASSWORD}
